--- a/middlware/package.json
+++ b/middlware/package.json
@@ -1,8 +1,20 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.6.5",
     "sequelize": "^6.35.1"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "middlware",
+  "version": "1.0.0",
+  "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
